--- a/index.css
+++ b/index.css
@@ -1,5 +1,74 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .page {
-    background-color: #FFEEC1; 
+    background-color: #FFEEC1;
     width: 320px;
     height: 427px;
+    position: relative;
+    overflow: hidden;
+}
+
+h1 {
+    font-family: "Poppins", sans-serif;
+    font-weight: 800;
+    font-size: 27.92px;
+    line-height: 28.68px;
+    text-align: center;
+    position: absolute;
+    top: 58px;
+    left: -210px;
+    z-index: 4;
+}
+
+h3 {
+    font-family: "Poppins", sans-serif;
+    font-size: 10px;
+    font-weight: 600;
+    line-height: 21.53px;
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 4;
+}
+
+.img1 {
+    height: 185px;
+    position: absolute;
+    top: 134px;
+    transform: rotateZ(345deg);
+    left: -78px;
+    z-index: 1;
+}
+
+.img2 {
+    height: 190.78px;
+    position: absolute;
+    top: 142px;
+    left: 125px;
+    transform: rotateZ(5deg);
+    z-index: 2;
+}
+
+.img3 {
+    height: 157.24px;
+    position: absolute;
+    top: 278px;
+    left: 201px;
+    z-index: 3;
+    transform: rotateZ(5deg);
+}
+
+.img4 {
+    height: 213.51px;
+    position: absolute;
+    top: 278px;
+    left: -5px;
+    transform: rotateZ(115deg);
 }
