--- a/index.css
+++ b/index.css
@@ -14,6 +14,12 @@ body {
     overflow: hidden;
 }
 
+
+header {
+    display: flex;
+    justify-content: center;
+}
+
 h1 {
     font-family: "Poppins", sans-serif;
     font-weight: 800;
@@ -33,8 +39,6 @@ h3 {
     line-height: 21.53px;
     text-align: center;
     position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
     z-index: 4;
 }
 
